# airflow-unicore-integration

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
example/: unicore-executor-template.py  unicore-executor-test-multi-site.py  unicore-test-container.py
project-dir/dags/: edge-executor-test.py  testdag.py  unicore-executor-test-2.py  unicore-executor-test-3.py  unicore-executor-test.py  unicore-test-1.py  unicore-test-2.py  unicore-test-3.py  unicore-test-4.py  unicore-test-bss.py  unicore-test-credentials.py  unicore-test-import-export.py  unicore-test-pre-post-command.py
src/airflow_unicore_integration/: operators.py
src/airflow_unicore_integration/executors/: unicore_executor.py
src/airflow_unicore_integration/hooks/: unicore_hooks.py
src/airflow_unicore_integration/operators/: container.py  unicore_operators.py
src/airflow_unicore_integration/util/: job.py
testing-env/: airflow-executor-unicore.docker  build-image.sh  docker-compose.yml  run-testing-env.sh  unicore-airflow.docker
