[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow_unicore_integration"
version = "0.0.1"
authors = [
  { name="Christian Böttcher", email="c.boettcher@fz-juelich.de" },
]
description = "Running Unicore Jobs from airflow DAGs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "TODO"
Issues = "TODO"